# wpaperd

./: .gitignore  CHANGELOG.md  CHANGES.md  Cargo.toml  MAINTAINERS.md  README.md  build.rs  flake.nix  install.yml
.github/workflows/: cargo.yml  devskim.yml  release.yml
cli/: Cargo.toml  build.rs
cli/src/: main.rs  opts.rs
contrib/: wpaperd.service
daemon/: Cargo.toml  build.rs
daemon/src/: config.rs  display_info.rs  filelist_cache.rs  image_loader.rs  image_picker.rs  ipc_server.rs  main.rs  opts.rs  render.rs  socket.rs  surface.rs  wallpaper_config.rs  wallpaper_groups.rs  wallpaper_info.rs  wpaperd.rs
daemon/src/render/: coordinates.rs  egl_context.rs  mod.rs  renderer.rs  shader.rs  transition.rs  wallpaper.rs
daemon/src/render/shaders/: BookFlip.glsl  Bounce.glsl  BowTieVertical.glsl  Circle.glsl  CircleCrop.glsl  CircleOpen.glsl  ColourDistance.glsl  CrossWarp.glsl  CrossZoom.glsl  Dreamy.glsl  Fade.glsl  FilmBurn.glsl  GlitchMemories.glsl  Hexagonalize.glsl  InvertedPageCurl.glsl  LeftRight.glsl  LinearBlur.glsl  Pixelize.glsl  Radial.glsl  Rectangle.glsl  RotateScaleFade.glsl  SimpleZoom.glsl
docs/: state-diagrams.md
ipc/: Cargo.toml
ipc/src/: lib.rs
man/: wpaper-output.5.scd  wpaperd-output.5.scd
nix/: default.nix  hm-module.nix  overlays.nix
src/: config.rs  ipc_server.rs  main.rs  output.rs  output_config.rs  socket.rs  surface.rs  wallpaper_info.rs  wpaperd.rs
wpaperd/: Cargo.toml
wpaperd/src/: config.rs  main.rs  output.rs  output_timer.rs  surface.rs
