[package]
name = "wpaperctl"
version = "1.2.0"
edition = "2021"
authors = ["Danilo Spinella <danilo.spinella@suse.com>"]
description = "CLI for wallpaper manager wpaperd"
homepage = "https://github.com/danyspin97/wpaperd"
repository = "https://github.com/danyspin97/wpaperd"
license = "GPL-3.0+"
keywords = ["wallpaper", "wayland", "wlroots"]
categories = ["command-line-utilities", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wpaperd-ipc = { path = "../ipc", version = "1.0.0" }
clap = { version = "4.5.35", features = ["derive", "wrap_help"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
humantime-serde = "1.1.1"
humantime = "2.2.0"

[build-dependencies]
clap = { version = "4.5.35", features = ["derive", "cargo"] }
clap_complete = "4.5.47"
clap_mangen = "0.2.26"
