[package]
name = "wpaperd"
version = "1.2.3"
edition = "2021"
authors = ["Danilo Spinella <danilo.spinella@suse.com>"]
description = "Wallpaper daemon for Wayland"
readme = "../README.md"
homepage = "https://github.com/danyspin97/wpaperd"
repository = "https://github.com/danyspin97/wpaperd"
license = "GPL-3.0+"
keywords = ["wallpaper", "wayland", "wlroots"]
categories = ["command-line-utilities", "multimedia"]
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wpaperd-ipc = { path = "../ipc", version = "1.0.0" }
clap = { version = "4.5.35", features = ["derive", "wrap_help"] }
color-eyre = { version = "0.6.3", default-features = false }
flexi_logger = { version = "0.30.0", default-features = false, features = ["colors"] }
image = "0.25.6"
hotwatch = "0.5.0"
humantime-serde = "1.1.1"
log = "0.4.27"
new_mime_guess = "4.0.4"
nix = { version = "0.29.0", features = ["process"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
smithay-client-toolkit = { version = "0.19.2", default-features = false, features = [ "calloop" ] }
toml = "0.8.20"
xdg = "2.5.2"
walkdir = "2.5.0"
dirs = "6.0.0"
serde_json = "1.0.140"
wayland-egl = "0.32.5"
khronos-egl = { version = "6.0.0", features = [ "static" ] }
format-bytes = "0.3.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
tikv-jemallocator = { version = "0.6.0", optional = true }
regex = "1.11.1"
rayon = "1.10.0"
fastrand = { version = "2.3.0", features = ["getrandom"] }

[build-dependencies]
clap = { version = "4.5.35", features = ["derive", "cargo"] }
clap_complete = "4.5.47"
clap_mangen = "0.2.26"
gl_generator = "0.14.0"

[features]
avif = ["image/avif-native"]
jemalloc = ["dep:tikv-jemallocator"]
default = ["jemalloc"]

