[package]
name = "wpaperd-ipc"
version = "1.0.1"
edition = "2021"
authors = ["Danilo Spinella <danilo.spinella@suse.com>"]
description = "IPC library for wpaperd"
homepage = "https://github.com/danyspin97/wpaperd"
repository = "https://github.com/danyspin97/wpaperd"
license = "GPL-3.0+"
keywords = ["wallpaper", "wayland", "wlroots"]
categories = ["command-line-utilities", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
xdg = "2.5.2"
